# asmVM

./: .gitignore  CMakeLists.txt  Makefile  memory.hpp  operations.hpp  registers.hpp
src/: main.cpp  memory.hpp  operations.hpp  registers.hpp  utils.hpp  virtual_machine.hpp
